added user registration and registration confirmation via mail. removed thymeleaf
