# Backend/src/main/java/com/de/nkoepf/backend/auth/LoginRequestModel.java
@@ -1,19 +1,0 @@
-package com.de.nkoepf.backend.auth;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-import javax.validation.constraints.NotBlank;
-
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-@Builder
-public class LoginRequestModel {
-    @NotBlank
-    private String email;
-    @NotBlank
-    private String password;
-}
